fix icon overlap that happened on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -11,8 +11,8 @@
   color: #000000;
   opacity: 0.3;
   font-size: 2.5em;
-  padding: 0rem 1rem;
-  width: 2em;
+  /*padding: 0rem 1rem;
+  width: 2em;*/
 }
 
 .newstitle{
